#32 Implement ArbProvider